progress on login session